adding 'Unique Word Count Analyzer' feature